syntax = "proto3";

service RemoodleService{
    rpc GetDeadlines(GetDeadlinesRequest) returns (GetDeadlinesResponse) {}
}

message GetDeadlinesRequest{
    int32 moodle_id = 1;
}

message GetDeadlinesResponse{
    repeated Event events = 1;
}

message Event{
    int32 event_id = 1;
    int32 timestart = 2;
    int32 instance = 3;
    string name = 4;
    bool visible = 5;
    int32 course_id = 6;
    string course_name = 7;
}
